crates/parser/tests/snapshots/surface_parser_test__literal_int.snap
---
source: crates/parser/tests/surface_parser_test.rs
expression: module
---
decls:
  - DefFn:
      name: f
      visibility: Private
      params: []
      constraints: []
      return_type:
        Named:
          name: Int
          span:
            - 11
            - 14
      body:
        Lit:
          value:
            Int: 42
          span:
            - 17
            - 19
      span:
        - 0
        - 19
