crates/parser/tests/snapshots/surface_parser_test__m12_function_def.snap
---
source: crates/parser/tests/surface_parser_test.rs
expression: module
---
decls:
  - DefFn:
      name: add
      visibility: Private
      params:
        - name: a
          ty:
            Named:
              name: Int
              span:
                - 24
                - 27
          span:
            - 21
            - 27
        - name: b
          ty:
            Named:
              name: Int
              span:
                - 32
                - 35
          span:
            - 29
            - 35
      constraints: []
      return_type:
        Named:
          name: Int
          span:
            - 40
            - 43
      body:
        BinaryOp:
          op: Add
          lhs:
            Var:
              name: a
              span:
                - 46
                - 47
          rhs:
            Var:
              name: b
              span:
                - 50
                - 51
          span:
            - 46
            - 51
      span:
        - 13
        - 51
  - DefFn:
      name: greet
      visibility: Private
      params:
        - name: name
          ty:
            Named:
              name: String
              span:
                - 68
                - 74
          span:
            - 62
            - 74
      constraints: []
      return_type:
        Named:
          name: String
          span:
            - 79
            - 85
      body:
        Do:
          exprs:
            - Let:
                name: msg
                value:
                  Lit:
                    value:
                      String: hello
                    span:
                      - 102
                      - 109
                body: ~
                span:
                  - 92
                  - 109
            - Var:
                name: msg
                span:
                  - 115
                  - 118
          span:
            - 86
            - 120
      span:
        - 52
        - 120
