crates/parser/tests/snapshots/surface_parser_test__m12_lambda.snap
---
source: crates/parser/tests/surface_parser_test.rs
expression: module
---
decls:
  - DefFn:
      name: apply
      visibility: Private
      params:
        - name: f
          ty:
            Fn:
              params:
                - Named:
                    name: Int
                    span:
                      - 27
                      - 30
              ret:
                Named:
                  name: Int
                  span:
                    - 35
                    - 38
              span:
                - 26
                - 38
          span:
            - 23
            - 38
        - name: x
          ty:
            Named:
              name: Int
              span:
                - 43
                - 46
          span:
            - 40
            - 46
      constraints: []
      return_type:
        Named:
          name: Int
          span:
            - 51
            - 54
      body:
        App:
          func:
            Var:
              name: f
              span:
                - 57
                - 58
          args:
            - Var:
                name: x
                span:
                  - 59
                  - 60
          span:
            - 57
            - 61
      span:
        - 13
        - 61
  - DefFn:
      name: inc
      visibility: Private
      params: []
      constraints: []
      return_type:
        Fn:
          params:
            - Named:
                name: Int
                span:
                  - 76
                  - 79
          ret:
            Named:
              name: Int
              span:
                - 84
                - 87
          span:
            - 75
            - 87
      body:
        Lambda:
          params:
            - name: x
              ty: ~
              span:
                - 90
                - 91
          return_type: ~
          body:
            BinaryOp:
              op: Add
              lhs:
                Var:
                  name: x
                  span:
                    - 95
                    - 96
              rhs:
                Lit:
                  value:
                    Int: 1
                  span:
                    - 99
                    - 100
              span:
                - 95
                - 100
          span:
            - 90
            - 100
      span:
        - 62
        - 100
  - DefFn:
      name: add_pair
      visibility: Private
      params: []
      constraints: []
      return_type:
        Fn:
          params:
            - Named:
                name: Int
                span:
                  - 120
                  - 123
            - Named:
                name: Int
                span:
                  - 125
                  - 128
          ret:
            Named:
              name: Int
              span:
                - 133
                - 136
          span:
            - 119
            - 136
      body:
        Lambda:
          params:
            - name: a
              ty: ~
              span:
                - 140
                - 141
            - name: b
              ty: ~
              span:
                - 143
                - 144
          return_type: ~
          body:
            BinaryOp:
              op: Add
              lhs:
                Var:
                  name: a
                  span:
                    - 149
                    - 150
              rhs:
                Var:
                  name: b
                  span:
                    - 153
                    - 154
              span:
                - 149
                - 154
          span:
            - 139
            - 154
      span:
        - 101
        - 154
