crates/parser/tests/snapshots/surface_parser_test__m12_let_binding.snap
---
source: crates/parser/tests/surface_parser_test.rs
expression: module
---
decls:
  - DefFn:
      name: simple
      visibility: Private
      params: []
      constraints: []
      return_type:
        Named:
          name: Int
          span:
            - 29
            - 32
      body:
        Do:
          exprs:
            - Let:
                name: x
                value:
                  Lit:
                    value:
                      Int: 5
                    span:
                      - 47
                      - 48
                body: ~
                span:
                  - 39
                  - 48
            - Var:
                name: x
                span:
                  - 54
                  - 55
          span:
            - 33
            - 57
      span:
        - 13
        - 57
  - DefFn:
      name: with_type
      visibility: Private
      params: []
      constraints: []
      return_type:
        Named:
          name: Int
          span:
            - 77
            - 80
      body:
        Do:
          exprs:
            - Let:
                name: x
                value:
                  Lit:
                    value:
                      Int: 5
                    span:
                      - 95
                      - 96
                body: ~
                span:
                  - 87
                  - 96
            - Let:
                name: y
                value:
                  Lit:
                    value:
                      Int: 10
                    span:
                      - 110
                      - 112
                body: ~
                span:
                  - 102
                  - 112
            - BinaryOp:
                op: Add
                lhs:
                  Var:
                    name: x
                    span:
                      - 118
                      - 119
                rhs:
                  Var:
                    name: y
                    span:
                      - 122
                      - 123
                span:
                  - 118
                  - 123
          span:
            - 81
            - 125
      span:
        - 58
        - 125
